@@ -1,0 +1,3 @@
+MD5 ee4b67306055b63e3911022ba071ff5c lcdf-typetools-2.66.tar.gz 502950
+RMD160 723f2ccca813b5a33f28417edfa67ab239ce2e1a lcdf-typetools-2.66.tar.gz 502950
+SHA256 7bfc0386c7b24719e9dc8e0c6ae5f9f780e5689200075d79ea5c85919f5e97db lcdf-typetools-2.66.tar.gz 502950
