@@ -1,0 +1,23 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/lcdf-typetools-2.66.ebuild,v 1.1 2007/09/04 03:10:49 aballier Exp $
+
+DESCRIPTION="Font utilities for eg manipulating OTF"
+SRC_URI="http://www.lcdf.org/type/${P}.tar.gz"
+HOMEPAGE="http://www.lcdf.org/type/#typetools"
+KEYWORDS="~amd64 ~x86"
+SLOT="0"
+LICENSE="GPL-2"
+IUSE="tetex"
+
+DEPEND="tetex? ( virtual/tetex )"
+
+src_compile() {
+	econf $(use_with tetex kpathsea) || die "econf failed"
+	emake || die "emake failed"
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc NEWS README ONEWS
+}
