@@ -1,6 +1,12 @@
 # ChangeLog for app-text/lcdf-typetools
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.1 2007/07/26 17:32:28 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.2 2007/09/04 03:10:49 aballier Exp $
+
+*lcdf-typetools-2.66 (04 Sep 2007)
+
+  04 Sep 2007; Alexis Ballier <aballier@gentoo.org>
+  +lcdf-typetools-2.66.ebuild:
+  version bump
 
 *lcdf-typetools-2.65 (26 Jul 2007)
 
